# generate_mcserver

./: .gitignore  Cargo.toml  build.rs
java_version_check/: VersionCheck.java
res/: default-server.properties  log4j2_112-116.xml  log4j2_17-111.xml
src/: cli.rs  hashing.rs  instance.rs  ioutil.rs  java.rs  main.rs  mojang.rs
src/commands/: add.rs  mod.rs  new.rs
src/mod_loader/: fabric.rs  mod.rs  paper.rs  vanilla.rs
src/mod_provider/: mod.rs  modrinth.rs
