[package]
name = "generate_mcserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
constcat = "0.5.0"
hex-literal = "0.4.1"
home = "0.5.9"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
tempfile = "3.10.1"
time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
tempdir = "0.3.7"
